k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zuzi-ingress

spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              name: api
      - path: /uploads
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              name: api
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http
            port:
              name: http
